# practica-apis

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
infra/: app.py  cdk.json  infra_stack.py  pyproject.toml
scripts/: invoke_local.py
src/lambda_function/: handler.py
